# code-examples

entrypoints/: setup.cfg
entrypoints/example_pkg/: example_format.py
