[metadata]
name = example_pkg
description = Short description of the package.
author = Michael Chow
author_email = mc_al_github@fastmail.com


[options]
packages = find:

[options.entry_points]
pins =
    example+csv = example_pkg.drivers:CsvDriver
    example+feather = example_pkg.drivers:FeatherDriver
    example+joblib = example_pkg.drivers:JoblibDriver

